examples/complete/config/kube-prometheus-stack/prometheus-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
  namespace: monitoring
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - prometheus.test.clouddrove.com
  http:
  - route:
    - destination:
        host: kube-prometheus-stack-prometheus
        port:
          number: 9090
